# yomuyume

./: .env.example  .eslintignore  .eslintrc  .gitignore  Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md  bun.lockb  eslint.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.devcontainer/: css_custom_data.json  devcontainer.json  postinstall.sh
deploy/: .gitignore  README.md  generate-client.sh
deploy/examples/client-caddy/: Caddyfile  Caddyfile-nodomain  docker-compose.yml
deploy/examples/client-node/: client.Dockerfile  docker-compose.yml
deploy/examples/recommended/: Caddyfile  docker-compose.yml  server.Dockerfile
src-rust/: build-bridge.sh  config.rs  main.rs
src-rust/bridge/: Cargo.toml  lib.rs
src-rust/bridge/routes/: auth.rs  index.rs  mod.rs  user.rs  utils.rs
src-rust/library_scanner/: blurhash.rs  title_metadata.rs  title_to_db.rs
src-rust/livescan/: blurhash.rs  cover_finder.rs  handle_category.rs  handle_title.rs  mod.rs  scan_category.rs  scan_library.rs
src-rust/migrator/: m_20231113_000001_create_users_table.rs  m_20231115_000002_create_categories_table.rs  m_20231115_000003_create_titles_table.rs  m_20231115_000004_create_pages_table.rs  m_20231116_000005_create_tags_table.rs  m_20231116_000006_create_titles_tags_table.rs  m_20231212_000007_create_bookmarks_table.rs  m_20231212_000008_create_covers_table.rs  m_20231212_000009_create_favorites_table.rs  m_20231212_000010_create_progresses_table.rs  m_20240829_0000011_create_session_tokens_table.rs  m_20240829_0000012_create_code_delete_account_table.rs  m_20240829_0000013_create_code_reset_password_table.rs  m_20240829_0000014_create_code_validate_email_table.rs  mod.rs
src-rust/models/: bookmarks.rs  categories.rs  code_delete_account.rs  code_reset_password.rs  code_validate_email.rs  metadata.rs  mod.rs  pages.rs  prelude.rs  progresses.rs  session_tokens.rs  tags.rs  titles.rs  titles_tags.rs  users.rs
src-rust/models/types/: custom_id.rs
src-rust/routes/: mod.rs
src-rust/routes/auth/: get_logout.rs  post_login.rs  post_register.rs
src-rust/routes/file/: cover.rs  get_cover.rs  get_page.rs  mod.rs
src-rust/routes/index/: get_categories.rs  get_title.rs  mod.rs  post_filter.rs
src-rust/routes/middlewares/: auth.rs
src-rust/routes/user/: delete.rs  delete_account.rs  favorite_bookmark.rs  get_check.rs  mailer.rs  mod.rs  modify.rs  modify_info.rs  put_progress.rs  reset.rs  reset_password.rs  validate_email.rs  verify.rs
src-rust/routes/utils/: get_scanning_progress.rs  get_tags.rs  mod.rs  status.rs
src-rust/server/: Cargo.toml  config.rs  main.rs
src-rust/server/constants/: mod.rs  version.rs
src-rust/server/livescan/: blurhash.rs  cover_finder.rs  handle_category.rs  handle_title.rs  mod.rs  scan_category.rs  scan_library.rs  thumbnail_finder.rs  title_ssim_score.rs
src-rust/server/migrator/: m_20231113_000001_create_users_table.rs  m_20231115_000002_create_categories_table.rs  m_20231115_000003_create_titles_table.rs  m_20231115_000004_create_pages_table.rs  m_20231116_000005_create_tags_table.rs  m_20231116_000006_create_titles_tags_table.rs  m_20231212_000007_create_bookmarks_table.rs  m_20231212_000008_create_covers_table.rs  m_20231212_000008_create_thumbnails_table.rs  m_20231212_000009_create_favorites_table.rs  mod.rs  (+2 more)
src/components/: DividerBar.vue  ImagePoly.vue  ItemCard.vue  NoScript.vue  Snackbar.vue  Toggle.vue
src/composables/: api.ts  changeTheme.ts  enumTheme.ts  globalStore.ts  isStrongPassword.ts  isValidEmail.ts  isValidUrl.ts  swiperBreakPoint.ts  types.ts
src/layouts/: NavDrawerWrapper.vue
src/middleware/: auth.global.ts
src/pages/: 404.vue  auth.vue  filter.vue  index.vue  library.vue  settings.vue  ssim_eval.vue
(+92 files in other folders)
