[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
bitcode = "0.5.1"
serde = "1.0.197"
serde_json = "1.0.114"
serde_with = { version = "3.6.1", features = ["json"] }
tracing = "0.1.40"
utoipa = "4.2.0"
wasm-bindgen = "0.2.91"
